--- a/app/src/main/resources/templates/createPost.html
+++ b/app/src/main/resources/templates/createPost.html
@@ -123,8 +123,8 @@
         </div>
 
         <div class="form-group">
-            <label for="image" class="block text-gray-600 font-semibold mb-2">Upload Image</label>
-            <input type="file" id="image" name="imageFile" accept="image/*" th:field="*{imageFile}" class="block w-full text-gray-600 border p-2 rounded">
+            <label for="postImage" class="block text-gray-600 font-semibold mb-2">Upload Image</label>
+            <input type="text" id="postImage" placeholder="Image Link" th:field="*{imageUrl}">
         </div>
 
         <div class="button-holder d-flex justify-content-center">
