--- a/app/src/main/resources/templates/home.html
+++ b/app/src/main/resources/templates/home.html
@@ -79,7 +79,7 @@
 
                         <div class="func-block">
                             <a href="/posts/new">
-                                <p>Add Recipe</p>
+                                <p>Add Post</p>
                                 <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                     <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 6v12m6-6H6"></path>
                                 </svg>
