--- a/app/src/main/resources/templates/posts.html
+++ b/app/src/main/resources/templates/posts.html
@@ -31,64 +31,75 @@
                                 </svg>
                             </a>
                             <!-- My Profile -->
-                            <a href="/users/{id}/profile" class="flex items-center space-x-2">
-                                <p>My Profile</p>
-                                <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 14c3.3 0 6 2.7 6 6H6c0-3.3 2.7-6 6-6zm0-10a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"></path>
-                                </svg>
-                            </a>
-                            <a class="messages" href="/messages/send">
-                                <p>Messages</p>
-                                <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 16c0 1.1.9 2 2 2h3v3l4-3h7c1.1 0 1.99-.9 1.99-2L22 4c0-1.1-.9-2-2-2z"></path>
-                                </svg>
-                            </a>
-                            <!-- Notifications -->
-                            <a href="/notifications" class="flex items-center space-x-2">
-                                <p>Notifications</p>
-                                <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 22c1.1 0 1.99-.9 1.99-2H10c0 1.1.89 2 1.99 2zm6-6V9c0-3.31-2.69-6-6-6S6 5.69 6 9v7l-2 2v1h16v-1l-2-2z"></path>
-                                </svg>
-                            </a>
+                            <div class="func-block">
+                                <!-- My Profile -->
+                                <a href="/users/{id}/profile" class="flex items-center space-x-2">
+                                    <p>My Profile</p>
+                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 14c3.3 0 6 2.7 6 6H6c0-3.3 2.7-6 6-6zm0-10a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"></path>
+                                    </svg>
+                                </a>
+                                <a class="messages" href="/messages/chat">
+                                    <p>Messages</p>
+                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 16c0 1.1.9 2 2 2h3v3l4-3h7c1.1 0 1.99-.9 1.99-2L22 4c0-1.1-.9-2-2-2z"></path>
+                                    </svg>
+                                </a>
+                                <!-- Notifications -->
+                                <a href="/notifications" class="flex items-center space-x-2">
+                                    <p>Notifications</p>
+                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 22c1.1 0 1.99-.9 1.99-2H10c0 1.1.89 2 1.99 2zm6-6V9c0-3.31-2.69-6-6-6S6 5.69 6 9v7l-2 2v1h16v-1l-2-2z"></path>
+                                    </svg>
+                                </a>
 
-                            <!-- Followers/Following -->
-                            <a href="/followers" class="flex items-center space-x-2">
-                                <p>Followers / Following</p>
-                                <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M5 21v-4a4 4 0 1 1 8 0v4m4 0v-4a4 4 0 1 1 8 0v4M9 7a4 4 0 1 1 8 0 4 4 0 0 1-8 0z"></path>
-                                </svg>
-                            </a>
-                            <a href="/bookmarks">
-                                <p>Bookmarks</p>
-                                <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M15 0H5c-1.1 0-1.99.9-1.99 2L3 22l8-4 8 4V2c0-1.1-.9-2-2-2z"></path>
-                                </svg>
-                            </a>
-                            <a href="/users">
-                                <p>Admin Panel</p>
-                                <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 2l7 4v5c0 5-3 9-7 11-4-2-7-6-7-11V6l7-4z"></path>
-                                </svg>
-                            </a>
-                        </div>
+                                <!-- Followers/Following -->
+                                <a href="/friendships/pending" class="flex items-center space-x-2">
+                                    <p>Followers / Following</p>
+                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M5 21v-4a4 4 0 1 1 8 0v4m4 0v-4a4 4 0 1 1 8 0v4M9 7a4 4 0 1 1 8 0 4 4 0 0 1-8 0z"></path>
+                                    </svg>
+                                </a>
+                                <a href="/posts">
+                                    <p>My Posts</p>
+                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M4 3h16c1.1 0 1.99.9 1.99 2L22 19c0 1.1-.9 2-2 2H4c-1.1 0-1.99-.9-1.99-2L2 5c0-1.1.9-2 2-2zM12 8h4v4h-4z"></path>
+                                    </svg>
+                                </a>
+                                <a href="/bookmarks">
+                                    <p>Bookmarks</p>
+                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M15 0H5c-1.1 0-1.99.9-1.99 2L3 22l8-4 8 4V2c0-1.1-.9-2-2-2z"></path>
+                                    </svg>
+                                </a>
+                                <div class="func-block admin-func-block" th:if="${user.role.name() == 'ADMIN'}">
+                                    <a href="/users">
+                                        <p>Admin Panel</p>
+                                        <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                            <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 2l7 4v5c0 5-3 9-7 11-4-2-7-6-7-11V6l7-4z"></path>
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
 
-                        <div class="func-block">
-                            <a href="/posts/new">
-                                <p>Add Recipe</p>
-                                <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 6v12m6-6H6"></path>
-                                </svg>
-                            </a>
-                        </div>
+                            <div class="func-block">
+                                <a href="/posts/new">
+                                    <p>Add Post</p>
+                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 6v12m6-6H6"></path>
+                                    </svg>
+                                </a>
+                            </div>
 
-                        <!-- Logout -->
-                        <div class="func-block">
-                            <a class="logout" href="/logout">
-                                <p>Logout</p>
-                                <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 17l4-4-4-4M20 12H8"></path>
-                                </svg>
-                            </a>
+                            <!-- Logout -->
+                            <div class="func-block">
+                                <a class="logout" href="/logout">
+                                    <p>Logout</p>
+                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 17l4-4-4-4M20 12H8"></path>
+                                    </svg>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -97,7 +108,8 @@
 
     </nav>
 </div></div>
-
+<div class="main-content">
+    <div class="posts-container">
 <div th:if="${posts != null}">
     <div th:each="post : ${posts}">
         <div class="post">
@@ -107,6 +119,9 @@
             <p><strong>Likes:</strong> <span th:text="${post.likes}"></span></p>
             <p><strong>Shares:</strong> <span th:text="${post.shares}"></span></p>
 
+            <!-- Display Post Image -->
+            <img th:src="${post.imageUrl}" alt="Post Image" style="max-width: 100%; height: auto;"/>
+
             <!-- Edit and Delete Buttons -->
             <a th:href="@{/posts/{id}/edit(id=${post.id})}">Edit Post</a>
             <form th:action="@{/posts/{id}(id=${post.id})}" method="post" style="display:inline;">
@@ -114,6 +129,7 @@
                 <button type="submit">Delete Post</button>
             </form>
         </div>
+    </div>
     </div>
 </div>
 
@@ -123,5 +139,6 @@
 </div>
 
 <th:block th:insert="fragments/footer :: footer"></th:block>
+</div>
 </body>
 </html>
