Fixing admins role

--- a/app/src/main/resources/templates/admin-reports.html
+++ b/app/src/main/resources/templates/admin-reports.html
@@ -11,11 +11,6 @@
     <title>Posts</title>
 </head>
 <body>
-<header>
-    <nav class="navbar">
-        <a href="/home" class="logo">Morsel</a>
-    </nav>
-</header>
 <div class="nav-bar"><div class="side-bar-container">
     <nav>
         <nav>
@@ -141,11 +136,11 @@
                         </form>
                     </td>
                     <td>
-                        <form th:action="@{'/users/' + ${singleUser.id} + '/role'}" th:method="PUT">
+                        <form th:action="@{'/users/' + ${curentUser.id} + '/role'}" th:method="PUT">
                             <button class="profile-actions-button">
                                 <p>Change</p>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-toggle-on"
-                                     viewBox="0 0 16 16">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                                     class="bi bi-toggle-on" viewBox="0 0 16 16">
                                     <path d="M5 3a5 5 0 0 0 0 10h6a5 5 0 0 0 0-10zm6 9a4 4 0 1 1 0-8 4 4 0 0 1 0 8"/>
                                 </svg>
                             </button>
@@ -156,7 +151,6 @@
             </table>
         </div>
     </div>
-</main>
-<div class="footer" th:insert="~{fragments/common/footer :: footer}"></div>
+    </main>
 </body>
 </html>
