--- a/app/src/main/resources/templates/profile-menu.html
+++ b/app/src/main/resources/templates/profile-menu.html
@@ -67,7 +67,7 @@
                                 </svg>
                             </a>
                             <div class="func-block admin-func-block" th:if="${user.role.name() == 'ADMIN'}">
-                                <a href="/users">
+                                <a href="/admin-panel">
                                     <p>Admin Panel</p>
                                     <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                         <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 2l7 4v5c0 5-3 9-7 11-4-2-7-6-7-11V6l7-4z"></path>
