--- a/app/src/main/resources/templates/friendship-pending.html
+++ b/app/src/main/resources/templates/friendship-pending.html
@@ -63,17 +63,19 @@
                                         <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M4 3h16c1.1 0 1.99.9 1.99 2L22 19c0 1.1-.9 2-2 2H4c-1.1 0-1.99-.9-1.99-2L2 5c0-1.1.9-2 2-2zM12 8h4v4h-4z"></path>
                                     </svg>
                                 </a>
-                                <a href="/users">
-                                    <p>Admin Panel</p>
-                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 2l7 4v5c0 5-3 9-7 11-4-2-7-6-7-11V6l7-4z"></path>
-                                    </svg>
-                                </a>
+                                <div class="func-block admin-func-block" th:if="${user.role.name() == 'ADMIN'}">
+                                    <a href="/admin-panel">
+                                        <p>Admin Panel</p>
+                                        <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                            <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 2l7 4v5c0 5-3 9-7 11-4-2-7-6-7-11V6l7-4z"></path>
+                                        </svg>
+                                    </a>
+                                </div>
                             </div>
 
                             <div class="func-block">
                                 <a href="/posts/new">
-                                    <p>Add Recipe</p>
+                                    <p>Add Post</p>
                                     <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                         <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 6v12m6-6H6"></path>
                                     </svg>
